--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 PORT=3000
-DATABASE_PATH=/opt/flowise/.flowise
-APIKEY_PATH=/opt/flowise/.flowise
-SECRETKEY_PATH=/opt/flowise/.flowise
-LOG_PATH=/opt/flowise/.flowise/logs
-BLOB_STORAGE_PATH=/opt/flowise/.flowise/storage
+DATABASE_PATH=/root/.flowise
+APIKEY_PATH=/root/.flowise
+SECRETKEY_PATH=/root/.flowise
+LOG_PATH=/root/.flowise/logs
+BLOB_STORAGE_PATH=//root/.flowise/storage
